[package]
name = "ed25519-paperkey"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7.4"
anyhow = "1.0.42"
base64 = "0.13.0"
clap = "2.33.3"
ed25519-dalek = "1.0.1"
thrussh-keys = "0.21.0"
zeroize = "1.4.1"
